--- a/09-数据库对象操作-【表空间】【索引】.md
+++ b/09-数据库对象操作-【表空间】【索引】.md
@@ -30,6 +30,10 @@ ALTER TABLESPACE index_space RENAME TO fast_raid;
 ```
 ALTER TABLESPACE index_space OWNER TO mary;
 ```
+- 表空间OID查询
+```
+select oid,datname from pg_database ;
+```
 
 ### 2 索引
 #### 2.1 定义
